# advtoolchain

./: .gitignore  LICENSE  README.md
symbolfinder/: symbolfinder.sh  symbolfinderdir.sh
undefsymbol/: CMakeLists.txt  build.sh  readme.md
undefsymbol/shared_lib/: CMakeLists.txt  shared_lib.cpp
undefsymbol/src/: CMakeLists.txt  main.cpp
undefsymbol/static_lib_a/: CMakeLists.txt  lib_a.cpp  lib_a.h
undefsymbol/static_lib_b/: CMakeLists.txt  lib_b.cpp  lib_b.h
